--- a/arch/mips/lib/Makefile
+++ b/arch/mips/lib/Makefile
@@ -34,11 +34,15 @@ LGOBJS	:= $(addprefix $(obj),$(GLSOBJS))
 
 SOBJS-y	+=
 
+ifndef CONFIG_SPL_BUILD
 COBJS-y	+= board.o
 ifeq ($(CONFIG_QEMU_MIPS),y)
 COBJS-$(CONFIG_CMD_BOOTM) += bootm_qemu_mips.o
 else
 COBJS-$(CONFIG_CMD_BOOTM) += bootm.o
+endif
+else
+COBJS-$(CONFIG_SPL_FRAMEWORK) += spl.o
 endif
 
 SRCS	:= $(SOBJS-y:.o=.S) $(COBJS-y:.o=.c)
