arch: add clk framework, gpio framework on jz4775 ddr: add host tools to calculate ddr parameters pll: merge pll.c from newxboot mmc: merge mmc driver to reduce text_size from v2013.10-rc3
Now, the code is more standard.

--- a/drivers/mmc/Makefile
+++ b/drivers/mmc/Makefile
@@ -49,6 +49,9 @@ COBJS-$(CONFIG_DWMMC) += dw_mmc.o
 COBJS-$(CONFIG_EXYNOS_DWMMC) += exynos_dw_mmc.o
 COBJS-$(CONFIG_ZYNQ_SDHCI) += zynq_sdhci.o
 COBJS-$(CONFIG_JZ_MMC) += jz_mmc.o
+ifndef CONFIG_SPL_BUILD
+COBJS-$(CONFIG_GENERIC_MMC) += mmc_write.o
+endif
 
 COBJS	:= $(COBJS-y)
 SRCS	:= $(COBJS:.o=.c)
