--- a/tools/ingenic-tools/Makefile
+++ b/tools/ingenic-tools/Makefile
@@ -1,5 +1,6 @@
 #
-# Copyright (C) 2012 Marek Vasut <marex@denx.de>
+# Copyright (c) 2013 Ingenic Semiconductor Co.,Ltd
+# Author: Zoro <ykli@ingenic.cn>
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License as
@@ -18,19 +19,38 @@
 #
 
 include $(TOPDIR)/config.mk
-all:	$(obj)ddr_params_creator $(obj)ddr_params.h
 
 HOSTCPPFLAGS = -I$(TOPDIR)/include
 
+DDR-$(CONFIG_DDR_PARAMS_CREATOR)	+= ddr_params_creator ddr_params.h
+MBR-$(CONFIG_MBR_CREATOR)		+= mbr_creator mbr.bin
+
+TOOLS	= $(DDR-y) $(MBR-y)
+TOOLS	:= $(addprefix $(obj),$(TOOLS))
+
+all:	$(obj).depend $(TOOLS)
+
 $(obj)ddr_params_creator:	ddr_params_creator.c
-	$(HOSTCC) $(HOSTCFLAGS) $(HOSTLDFLAGS) -o $@ $^
+	$(HOSTCC) $(HOSTCFLAGS_NOPED) $(HOSTLDFLAGS) -o $@ $^
 	$(HOSTSTRIP) $@
 
 $(obj)ddr_params.h:	$(obj)ddr_params_creator
 	$(OBJTREE)/tools/ingenic-tools/ddr_params_creator > $(OBJTREE)/include/generated/$@
 
+$(obj)mbr_creator:	mbr_creator.c
+	$(HOSTCC) $(HOSTCFLAGS_NOPED) $(HOSTLDFLAGS) -o $@ $^
+	$(HOSTSTRIP) $@
+
+$(obj)mbr.bin:	$(obj)mbr_creator
+	$(OBJTREE)/tools/ingenic-tools/mbr_creator	\
+		p0off=$(CONFIG_MBR_P0_OFF),p0end=$(CONFIG_MBR_P0_END),p0type=$(CONFIG_MBR_P0_TYPE) \
+		p1off=$(CONFIG_MBR_P1_OFF),p1end=$(CONFIG_MBR_P1_END),p1type=$(CONFIG_MBR_P1_TYPE) \
+		p2off=$(CONFIG_MBR_P2_OFF),p2end=$(CONFIG_MBR_P2_END),p2type=$(CONFIG_MBR_P2_TYPE) \
+		p3off=$(CONFIG_MBR_P3_OFF),p3end=$(CONFIG_MBR_P3_END),p3type=$(CONFIG_MBR_P3_TYPE) \
+		-o $@ > /dev/zero
+
 clean:
-	rm -f $(obj)ddr_params_creator
+	rm -f $(TOOLS) $(obj).depend
 
 distclean:	clean
 
