--- a/arch/mips/cpu/xburst/jz4775/Makefile
+++ b/arch/mips/cpu/xburst/jz4775/Makefile
@@ -1,8 +1,10 @@
 #
 # Ingenic JZ4775 makefile
 #
-# Copyright (c) 2013 Imagination Technologies
-# Author: Paul Burton <paul.burton@imgtec.com>
+# Copyright (c) 2013 Ingenic Semiconductor Co.,Ltd
+# Author: Zoro <ykli@ingenic.cn>
+# Based on: arch/mips/cpu/xburst/jz4780/Makefile
+#           Written by Paul Burton <paul.burton@imgtec.com>
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License as
