--- a/board/ingenic/mensa/Makefile
+++ b/board/ingenic/mensa/Makefile
@@ -1,8 +1,10 @@
 #
-# ReliableIPTV urboard makefile
+# Ingenic mensa makefile
 #
-# Copyright (c) 2013 Imagination Technologies
-# Author: Paul Burton <paul.burton@imgtec.com>
+# Copyright (c) 2013 Ingenic Semiconductor Co.,Ltd
+# Author: Zoro <ykli@ingenic.cn>
+# Based on: board/reliableIPTV/urboard/Makefile
+#           Written by Paul Burton <paul.burton@imgtec.com>
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License as
