ddr: Restructure DDR driver.   1. Add ddr HOST_CC(compile and calculate) code, define CONFIG_DDR_HOST_CC to enable it.   2. Add ddr N_HOST_CC code, and it is fit for sharing spl with USB Burning tools.      Both HOST_CC and N_HOST_CC share the same code to calculate and initialize DDR.   3. Add ddr configure macro: ODT,DLL,DDR_TYPE,Impedance pull-up/down. spl: move .bss to tcsm. In that way, we can init serial before sdram init safely. freq: [mensa]Speed up cpufreq to 1.2G ddrfreq to 400M, based on spl regulater.

--- a/arch/mips/cpu/xburst/jz4775/Makefile
+++ b/arch/mips/cpu/xburst/jz4775/Makefile
@@ -30,7 +30,7 @@ SOBJS-y	=
 COBJS-y	= $(SOC).o
 COBJS-y += pll.o
 COBJS-y += clk.o
-COBJS-y += sdram.o
+COBJS-y += ddr.o
 COBJS-y += timer.o
 
 SRCS	:= $(START:.o=.S) $(SOBJS-y:.o=.S) $(COBJS-y:.o=.c)
