1 add burner_jz4775 2 add globle_info for burner 3 mv spl bss to cache again 4 ensafe cache ops

--- a/boards.cfg
+++ b/boards.cfg
@@ -494,6 +494,7 @@ incaip_133MHz                mips        mips32      incaip              -      
 incaip_150MHz                mips        mips32      incaip              -              incaip      incaip:CPU_CLOCK_RATE=150000000
 mensa_mmc                    mips        xburst      mensa               ingenic        jz4775      mensa:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR
 mensa_nand                   mips        xburst      mensa               ingenic        jz4775
+burner_jz4775                mips        xburst      burner_jz4775       ingenic        jz4775      burner_jz4775:SPL_MMC_SUPPORT,ENV_IS_IN_MMC
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
 adp-ag101p                   nds32       n1213       adp-ag101p          AndesTech      ag101
 adp-ag102                    nds32       n1213       adp-ag102           AndesTech      ag102
