Add burntool function of usb gadget driver

--- a/drivers/usb/gadget/Makefile
+++ b/drivers/usb/gadget/Makefile
@@ -38,6 +38,9 @@ COBJS-$(CONFIG_USB_GADGET_S3C_UDC_OTG) += s3c_udc_otg.o
 COBJS-$(CONFIG_USB_GADGET_FOTG210) += fotg210.o
 COBJS-$(CONFIG_USBDOWNLOAD_GADGET) += g_dnl.o
 COBJS-$(CONFIG_DFU_FUNCTION) += f_dfu.o
+COBJS-$(CONFIG_USB_JZ_BURNER_GADGET) += g_burntool.o
+COBJS-$(CONFIG_USB_JZ_DWC2_UDC)	+= jz_dwc2_udc.o
+COBJS-$(CONFIG_JZ_VERDOR_BURN_FUNCTION) += f_jz_vendor_burntool.o
 endif
 ifdef CONFIG_USB_ETHER
 COBJS-y += ether.o
