--- a/common/Makefile
+++ b/common/Makefile
@@ -207,6 +207,7 @@ COBJS-$(CONFIG_UPDATE_TFTP) += update.o
 COBJS-$(CONFIG_USB_KEYBOARD) += usb_kbd.o
 COBJS-$(CONFIG_CMD_DFU) += cmd_dfu.o
 COBJS-$(CONFIG_CMD_GPT) += cmd_gpt.o
+COBJS-$(CONFIG_CMD_BURN) += cmd_burn.o
 endif
 
 ifdef CONFIG_SPL_BUILD
