--- a/boards.cfg
+++ b/boards.cfg
@@ -495,6 +495,8 @@ incaip_150MHz                mips        mips32      incaip              -      
 mensa_mmc                    mips        xburst      mensa               ingenic        jz4775      mensa:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR
 mensa_nand                   mips        xburst      mensa               ingenic        jz4775
 burner_jz4775                mips        xburst      burner_jz4775       ingenic        jz4775      burner_jz4775:SPL_MMC_SUPPORT,ENV_IS_IN_MMC
+grus_mmc                     mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR
+grus_nand                    mips        xburst      grus                ingenic        jz4780
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
 adp-ag101p                   nds32       n1213       adp-ag101p          AndesTech      ag101
 adp-ag102                    nds32       n1213       adp-ag102           AndesTech      ag102
