1 add cache config(size) to start.s 2 mv ddr & timer driver from SOC to CPU,75 80 share the same driver 3 add 80 pll config 4 add DDR3_H5TQ2G83CFR_H9C for grus 5 fix bugs in SD card driver.

--- a/boards.cfg
+++ b/boards.cfg
@@ -492,11 +492,17 @@ incaip                       mips        mips32      incaip              -      
 incaip_100MHz                mips        mips32      incaip              -              incaip      incaip:CPU_CLOCK_RATE=100000000
 incaip_133MHz                mips        mips32      incaip              -              incaip      incaip:CPU_CLOCK_RATE=133000000
 incaip_150MHz                mips        mips32      incaip              -              incaip      incaip:CPU_CLOCK_RATE=150000000
-mensa_mmc                    mips        xburst      mensa               ingenic        jz4775      mensa:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR
-mensa_nand                   mips        xburst      mensa               ingenic        jz4775
+mensa_android_msc0           mips        xburst      mensa               ingenic        jz4775      mensa:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,BOOT_ANDROID
+mensa_android_msc1           mips        xburst      mensa               ingenic        jz4775      mensa:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1,BOOT_ANDROID
+mensa_uImage_msc0            mips        xburst      mensa               ingenic        jz4775      mensa:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR
+mensa_uImage_msc1            mips        xburst      mensa               ingenic        jz4775      mensa:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1
+mensa_android_nand           mips        xburst      mensa               ingenic        jz4775
 burner_jz4775                mips        xburst      burner_jz4775       ingenic        jz4775      burner_jz4775:SPL_MMC_SUPPORT,ENV_IS_IN_MMC
-grus_mmc                     mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR
-grus_nand                    mips        xburst      grus                ingenic        jz4780
+grus_android_msc0            mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,BOOT_ANDROID
+grus_android_msc1            mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1,BOOT_ANDROID
+grus_uImage_msc0             mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,
+grus_uImage_msc1             mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1
+grus_android_nand            mips        xburst      grus                ingenic        jz4780
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
 adp-ag101p                   nds32       n1213       adp-ag101p          AndesTech      ag101
 adp-ag102                    nds32       n1213       adp-ag102           AndesTech      ag102
