--- a/common/Makefile
+++ b/common/Makefile
@@ -43,7 +43,8 @@ COBJS-$(CONFIG_SYS_GENERIC_BOARD) += board_r.o
 # core command
 COBJS-y += cmd_boot.o
 COBJS-$(CONFIG_BOOT_ANDROID) += cmd_boota.o
-COBJS-$(CONFIG_FAST_BOOT_SUPPORT) += cmd_fastboot.o
+COBJS-$(CONFIG_BOOT_ANDROID) += boot_mode.o
+COBJS-$(CONFIG_CMD_FASTBOOT) += cmd_fastboot.o
 COBJS-$(CONFIG_CMD_BOOTM) += cmd_bootm.o
 COBJS-y += cmd_help.o
 COBJS-y += cmd_version.o
