add burner_jz4780 board config

--- a/boards.cfg
+++ b/boards.cfg
@@ -498,6 +498,7 @@ mensa_uImage_msc0            mips        xburst      mensa               ingenic
 mensa_uImage_msc1            mips        xburst      mensa               ingenic        jz4775      mensa:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1
 mensa_android_nand           mips        xburst      mensa               ingenic        jz4775
 burner_jz4775                mips        xburst      burner_jz4775       ingenic        jz4775      burner_jz4775:SPL_MMC_SUPPORT,ENV_IS_IN_MMC
+burner_jz4780                mips        xburst      burner_jz4780       ingenic        jz4780      burner_jz4780:SPL_MMC_SUPPORT,ENV_IS_IN_MMC
 grus_android_msc0            mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,BOOT_ANDROID
 grus_android_msc1            mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1,BOOT_ANDROID
 grus_uImage_msc0             mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,
