--- a/common/Makefile
+++ b/common/Makefile
@@ -209,6 +209,7 @@ COBJS-$(CONFIG_USB_KEYBOARD) += usb_kbd.o
 COBJS-$(CONFIG_CMD_DFU) += cmd_dfu.o
 COBJS-$(CONFIG_CMD_GPT) += cmd_gpt.o
 COBJS-$(CONFIG_CMD_BURN) += cmd_burn.o
+COBJS-$(CONFIG_CMD_BATTERYDET) += cmd_batterydet.o
 endif
 
 ifdef CONFIG_SPL_BUILD
