--- a/tools/Makefile
+++ b/tools/Makefile
@@ -130,8 +130,10 @@ RSA_OBJ_FILES-$(CONFIG_FIT_SIGNATURE) += rsa-sign.o
 
 # Generated LCD/video logo
 LOGO_H = $(OBJTREE)/include/bmp_logo.h
+CHARGE_LOGO_H = $(OBJTREE)/include/charge_logo.h
 LOGO_DATA_H = $(OBJTREE)/include/bmp_logo_data.h
 LOGO-$(CONFIG_LCD_LOGO) += $(LOGO_H)
+LOGO-$(CONFIG_CMD_BATTERYDET) += $(CHARGE_LOGO_H)
 LOGO-$(CONFIG_LCD_LOGO) += $(LOGO_DATA_H)
 LOGO-$(CONFIG_VIDEO_LOGO) += $(LOGO_H)
 LOGO-$(CONFIG_VIDEO_LOGO) += $(LOGO_DATA_H)
@@ -150,6 +152,14 @@ endif
 endif
 
 endif # !LOGO_BMP
+ifeq ($(CHARGE_LOGO_BMP),)
+CHARGE_LOGO_BMP= charge_logo/1.bmp \
+		charge_logo/2.bmp \
+		charge_logo/3.bmp \
+		charge_logo/4.bmp \
+		charge_logo/5.bmp \
+		charge_logo/6.bmp
+endif
 
 # now $(obj) is defined
 HOSTSRCS += $(addprefix $(SRCTREE)/,$(EXT_OBJ_FILES-y:.o=.c))
@@ -291,7 +301,8 @@ $(LOGO_H):	$(obj)bmp_logo $(LOGO_BMP)
 
 $(LOGO_DATA_H):	$(obj)bmp_logo $(LOGO_BMP)
 	$(obj)./bmp_logo --gen-data $(LOGO_BMP) > $@
-
+$(CHARGE_LOGO_H) : $(obj)bmp_logo $(CHARGE_LOGO_BMP)
+	$(obj)./bmp_logo  $(CHARGE_LOGO_BMP) > $@
 #########################################################################
 
 # defines $(obj).depend target
