1 add spi_check_sum tool and support spi-spl build on f4785 2 support nand-spl build on f4785

--- a/boards.cfg
+++ b/boards.cfg
@@ -505,7 +505,8 @@ grus_uImage_msc0             mips        xburst      grus                ingenic
 grus_uImage_msc1             mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1
 grus_android_nand            mips        xburst      grus                ingenic        jz4780
 f4785_uImage_msc0            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR
-f4785_uImage_nand            mips        xburst      f4785               ingenic        jz4785      f4785
+f4785_uImage_nand            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_NAND_SUPPORT
+f4785_uImage_spi             mips        xburst      f4785               ingenic        jz4785      f4785:SPL_SPI_SUPPORT
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
 adp-ag101p                   nds32       n1213       adp-ag101p          AndesTech      ag101
 adp-ag102                    nds32       n1213       adp-ag102           AndesTech      ag102
