--- a/tools/.gitignore
+++ b/tools/.gitignore
@@ -21,3 +21,5 @@
 /kernel-doc/docproc
 /ingenic-tools/ddr_params_creator
 /ingenic-tools/mbr_creator
+/ingenic-tools/gpt_creator
+/ingenic-tools/spi_checksum
