support nor u-boot for f4780

--- a/boards.cfg
+++ b/boards.cfg
@@ -507,6 +507,7 @@ grus_android_nand            mips        xburst      grus                ingenic
 f4785_uImage_msc0            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR
 f4785_uImage_nand            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_NAND_SUPPORT
 f4785_uImage_spi             mips        xburst      f4785               ingenic        jz4785      f4785:SPL_SPI_SUPPORT
+f4785_uImage_nor             mips        xburst      f4785               ingenic        jz4785      f4785:SPL_NOR_SUPPORT
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
 adp-ag101p                   nds32       n1213       adp-ag101p          AndesTech      ag101
 adp-ag102                    nds32       n1213       adp-ag102           AndesTech      ag102
