--- a/boards.cfg
+++ b/boards.cfg
@@ -506,7 +506,8 @@ grus_uImage_msc1             mips        xburst      grus                ingenic
 grus_android_nand            mips        xburst      grus                ingenic        jz4780
 f4785_uImage_msc0            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR
 f4785_uImage_nand            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_NAND_SUPPORT
-f4785_uImage_spi             mips        xburst      f4785               ingenic        jz4785      f4785:SPL_SPI_SUPPORT
+f4785_uImage_spinor          mips        xburst      f4785               ingenic        jz4785      f4785:SPL_SPI_SUPPORT
+f4785_uImage_spinand         mips        xburst      f4785               ingenic        jz4785      f4785:SPL_SPI_SUPPORT,SPI_NAND
 f4785_uImage_nor             mips        xburst      f4785               ingenic        jz4785      f4785:SPL_NOR_SUPPORT
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
 adp-ag101p                   nds32       n1213       adp-ag101p          AndesTech      ag101
