add traps for xburst soc and enable traps for burner board

--- a/arch/mips/cpu/xburst/Makefile
+++ b/arch/mips/cpu/xburst/Makefile
@@ -27,6 +27,7 @@ LIB	= $(obj)lib$(CPU).o
 START	= start.o
 SOBJS-y	=
 COBJS-y	= cpu.o jz_serial.o timer.o
+COBJS-(CONFIG_XBURST_TRAPS) = traps.o
 
 ifdef	CONFIG_SPL_BUILD
 ifdef	CONFIG_SPL_NO_CPU_SUPPORT_CODE
