--- a/boards.cfg
+++ b/boards.cfg
@@ -504,7 +504,8 @@ grus_android_msc1            mips        xburst      grus                ingenic
 grus_uImage_msc0             mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,
 grus_uImage_msc1             mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1
 grus_android_nand            mips        xburst      grus                ingenic        jz4780
-f4785_uImage_msc0            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR
+f4785_uImage_msc0            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
+f4785_uImage_msc1            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC1
 f4785_uImage_nand            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_NAND_SUPPORT
 f4785_uImage_spinor          mips        xburst      f4785               ingenic        jz4785      f4785:SPL_SPI_SUPPORT
 f4785_uImage_spinand         mips        xburst      f4785               ingenic        jz4785      f4785:SPL_SPI_SUPPORT,SPI_NAND
