1 add the DDR DQS soft traning codes 2 support LPDDR(MDDR) KMS5U000KM-B308 MCP 3 support LPDDR2 H9TP32A8JDMC_PRKGM MCP 4 modify the cpm bug about read the CPSPR

--- a/arch/mips/cpu/xburst/jz4775/Makefile
+++ b/arch/mips/cpu/xburst/jz4775/Makefile
@@ -31,6 +31,13 @@ COBJS-y	= $(SOC).o
 COBJS-y += pll.o
 COBJS-y += clk.o
 COBJS-y += ../ddr_dwc.o
+ifdef CONFIG_SPL_DDR_SOFT_TRAINING
+COBJS-y += ../ddr_dqs_training.o
+else
+ifdef CONFIG_DDR_FORCE_SOFT_TRAINING
+COBJS-y += ../ddr_dqs_training.o
+endif
+endif
 
 SRCS	:= $(START:.o=.S) $(SOBJS-y:.o=.S) $(COBJS-y:.o=.c)
 OBJS	:= $(addprefix $(obj),$(SOBJS-y) $(COBJS-y))
