--- a/boards.cfg
+++ b/boards.cfg
@@ -504,9 +504,10 @@ burner_jz4780_lpddr          mips        xburst      burner_jz4780       ingenic
 burner_jz4780_lpddr2         mips        xburst      burner_jz4780       ingenic        jz4780      burner_jz4780:DDR_TYPE_LPDDR2
 grus_android_msc0            mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,BOOT_ANDROID
 grus_android_msc1            mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1,BOOT_ANDROID
+grus_uImage_spinor	     mips        xburst      grus                ingenic        jz4780      grus:SPL_SPI_SUPPORT
 grus_uImage_msc0             mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,
 grus_uImage_msc1             mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1
-grus_spi_burner              mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1,SPI_FLASH
+grus_spi_burner              mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1,SPI_BURNER
 grus_android_nand            mips        xburst      grus                ingenic        jz4780
 f4785_uImage_msc0            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 f4785_uImage_msc1            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC1
