--- a/boards.cfg
+++ b/boards.cfg
@@ -510,6 +510,7 @@ grus_uImage_msc1             mips        xburst      grus                ingenic
 grus_spi_burner              mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1,SPI_BURNER
 grus_android_nand            mips        xburst      grus                ingenic        jz4780
 f4785_uImage_msc0            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
+f4785_uImage_emmc            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,SUPPORT_EMMC_BOOT
 f4785_uImage_msc1            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC1
 f4785_uImage_nand            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_NAND_SUPPORT
 f4785_uImage_spinor          mips        xburst      f4785               ingenic        jz4785      f4785:SPL_SPI_SUPPORT
