--- a/boards.cfg
+++ b/boards.cfg
@@ -497,6 +497,7 @@ mensa_android_msc1           mips        xburst      mensa               ingenic
 mensa_uImage_msc0            mips        xburst      mensa               ingenic        jz4775      mensa:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR
 mensa_uImage_msc1            mips        xburst      mensa               ingenic        jz4775      mensa:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1
 mensa_android_nand           mips        xburst      mensa               ingenic        jz4775
+newton_uImage_msc0           mips        xburst      newton              ingenic        jz4775      newton:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR
 burner_jz4775_ddr3           mips        xburst      burner_jz4775       ingenic        jz4775      burner_jz4775:DDR_TYPE_DDR3
 burner_jz4775_lpddr          mips        xburst      burner_jz4775       ingenic        jz4775      burner_jz4775:DDR_TYPE_LPDDR,SPL_DDR_SOFT_TRAINING
 burner_jz4780_ddr3           mips        xburst      burner_jz4780       ingenic        jz4780      burner_jz4780:DDR_TYPE_DDR3
