--- a/boards.cfg
+++ b/boards.cfg
@@ -503,6 +503,9 @@ burner_jz4775_lpddr          mips        xburst      burner_jz4775       ingenic
 burner_jz4780_ddr3           mips        xburst      burner_jz4780       ingenic        jz4780      burner_jz4780:DDR_TYPE_DDR3
 burner_jz4780_lpddr          mips        xburst      burner_jz4780       ingenic        jz4780      burner_jz4780:DDR_TYPE_LPDDR
 burner_jz4780_lpddr2         mips        xburst      burner_jz4780       ingenic        jz4780      burner_jz4780:DDR_TYPE_LPDDR2
+burner_jz4785_ddr3           mips        xburst      burner_jz4785       ingenic        jz4785      burner_jz4785:DDR_TYPE_DDR3
+burner_jz4785_lpddr          mips        xburst      burner_jz4785       ingenic        jz4785      burner_jz4785:DDR_TYPE_LPDDR
+burner_jz4785_lpddr2         mips        xburst      burner_jz4785       ingenic        jz4785      burner_jz4785:DDR_TYPE_LPDDR2
 grus_android_msc0            mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,BOOT_ANDROID
 grus_android_msc1            mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1,BOOT_ANDROID
 grus_uImage_spinor	     mips        xburst      grus                ingenic        jz4780      grus:SPL_SPI_SUPPORT
