optimize the charge logo code, and mofify the a bug for filling the framebuffer

--- a/tools/ingenic-tools/Makefile
+++ b/tools/ingenic-tools/Makefile
@@ -32,8 +32,10 @@ SPI-$(CONFIG_SPI_SPL_CHECK)		+= spi_checksum
 SPL-$(CONFIG_SPL_PARAMS_FIXER)		+= spl_params_fixer
 IMG2RLE-$(CONFIG_RLE_LCD_LOGO)          += img2rle
 BIN2ARRAY-$(CONFIG_RLE_LCD_LOGO)        += bin2array
-LOGO-$(CONFIG_LCD_LOGO) += $(RLE_LOGO_C) #added by ykliu
-RLE_LOGO_C = $(OBJTREE)/common/rle_logo.c #added by ykliu
+LOGO-$(CONFIG_LCD_LOGO) += $(RLE_LOGO_C)
+CHARGE_LOGO-$(CONFIG_CMD_BATTERYDET) += $(RLE_CHARGE_LOGO_H)
+RLE_LOGO_C = $(OBJTREE)/common/rle_logo.c
+RLE_CHARGE_LOGO_H = $(OBJTREE)/include/rle_charge_logo.h
 
 #### Use jpg to make logo, added by ykliu ####
 ifeq ($(LOGO_JPG),)
@@ -51,7 +53,30 @@ endif
 endif
 endif
 
-TOOLS	= $(DDR-y) $(MBR-y) $(GPT-y) $(SPI-y) $(SPL-y) $(IMG2RLE-y) $(BIN2ARRAY-y) $(LOGO-y)
+ifeq ($(CHARGE_LOGO_JPG),)
+CHARGE_LOGO_JPG1= ../charge_logo/1.jpg
+CHARGE_LOGO_JPG2= ../charge_logo/2.jpg
+CHARGE_LOGO_JPG3= ../charge_logo/3.jpg
+CHARGE_LOGO_JPG4= ../charge_logo/4.jpg
+CHARGE_LOGO_JPG5= ../charge_logo/5.jpg
+CHARGE_LOGO_JPG6= ../charge_logo/6.jpg
+
+CHARGE_LOGO_RLE1= ../charge_logo/1.jpg.rle
+CHARGE_LOGO_RLE2= ../charge_logo/2.jpg.rle
+CHARGE_LOGO_RLE3= ../charge_logo/3.jpg.rle
+CHARGE_LOGO_RLE4= ../charge_logo/4.jpg.rle
+CHARGE_LOGO_RLE5= ../charge_logo/5.jpg.rle
+CHARGE_LOGO_RLE6= ../charge_logo/6.jpg.rle
+
+CHARGE_LOGO_RLE_ALL= $(CHARGE_LOGO_RLE1) \
+		$(CHARGE_LOGO_RLE2) \
+		$(CHARGE_LOGO_RLE3) \
+		$(CHARGE_LOGO_RLE4) \
+		$(CHARGE_LOGO_RLE5) \
+		$(CHARGE_LOGO_RLE6)
+endif
+
+TOOLS	= $(DDR-y) $(MBR-y) $(GPT-y) $(SPI-y) $(SPL-y) $(IMG2RLE-y) $(BIN2ARRAY-y) $(LOGO-y) $(CHARGE_LOGO-y)
 TOOLS	:= $(addprefix $(obj),$(TOOLS))
 
 all:	$(obj).depend $(TOOLS)
@@ -111,10 +136,25 @@ $(LOGO_RLE):  $(obj)img2rle $(LOGO_JPG)
 	$(obj)./img2rle  $(LOGO_JPG) $@
 
 $(RLE_LOGO_C):	$(obj)bin2array $(LOGO_RLE)
-	$(obj)./bin2array $(LOGO_RLE) $@
+	$(obj)./bin2array --one $(LOGO_RLE) $@
 
 
 
+$(CHARGE_LOGO_RLE1):  $(obj)img2rle $(CHARGE_LOGO_JPG1)
+	$(obj)./img2rle  $(CHARGE_LOGO_JPG1) $@
+$(CHARGE_LOGO_RLE2):  $(obj)img2rle $(CHARGE_LOGO_JPG2)
+	$(obj)./img2rle  $(CHARGE_LOGO_JPG2) $@
+$(CHARGE_LOGO_RLE3):  $(obj)img2rle $(CHARGE_LOGO_JPG3)
+	$(obj)./img2rle  $(CHARGE_LOGO_JPG3) $@
+$(CHARGE_LOGO_RLE4):  $(obj)img2rle $(CHARGE_LOGO_JPG4)
+	$(obj)./img2rle  $(CHARGE_LOGO_JPG4) $@
+$(CHARGE_LOGO_RLE5):  $(obj)img2rle $(CHARGE_LOGO_JPG5)
+	$(obj)./img2rle  $(CHARGE_LOGO_JPG5) $@
+$(CHARGE_LOGO_RLE6):  $(obj)img2rle $(CHARGE_LOGO_JPG6)
+	$(obj)./img2rle  $(CHARGE_LOGO_JPG6) $@
+
+$(RLE_CHARGE_LOGO_H):	$(obj)bin2array $(CHARGE_LOGO_RLE_ALL)
+	$(obj)./bin2array --mult $(CHARGE_LOGO_RLE_ALL)  $@
 
 clean:
 	rm -f $(TOOLS) $(obj).depend
