--- a/board/ingenic/f4785/Makefile
+++ b/board/ingenic/f4785/Makefile
@@ -27,6 +27,7 @@ include $(TOPDIR)/config.mk
 LIB	= $(obj)lib$(BOARD).o
 
 COBJS	:= $(BOARD).o
+COBJS-$(CONFIG_VIDEO_JZ4785) += lcd.o
 
 SRCS	:= $(SOBJS:.o=.S) $(COBJS:.o=.c)
 OBJS	:= $(addprefix $(obj),$(SOBJS) $(COBJS))
