--- a/tools/ingenic-tools/Makefile
+++ b/tools/ingenic-tools/Makefile
@@ -30,6 +30,8 @@ MBR-$(CONFIG_MBR_CREATOR)		+= mbr_creator mbr.bin
 GPT-$(CONFIG_GPT_CREATOR)		+= mbr-gpt.bin
 SPI-$(CONFIG_SPI_SPL_CHECK)		+= spi_checksum
 SPL-$(CONFIG_SPL_PARAMS_FIXER)		+= spl_params_fixer
+IMG2RLE-$(CONFIG_RLE_LCD_LOGO)          += img2rle
+BIN2ARRAY-$(CONFIG_RLE_LCD_LOGO)        += bin2array
 LOGO-$(CONFIG_LCD_LOGO) += $(RLE_LOGO_C)
 CHARGE_LOGO-$(CONFIG_CMD_BATTERYDET) += $(RLE_CHARGE_LOGO_H)
 RLE_LOGO_C = $(OBJTREE)/common/rle_logo.c
@@ -74,7 +76,7 @@ CHARGE_LOGO_RLE_ALL= $(CHARGE_LOGO_RLE1) \
 		$(CHARGE_LOGO_RLE6)
 endif
 
-TOOLS	= $(DDR-y) $(MBR-y) $(GPT-y) $(SPI-y) $(SPL-y) $(IMG2RLE-y) $(BIN2ARRAY-y) $(LOGO-y) $(CHARGE_LOGO-y)
+TOOLS	= $(DDR-y) $(MBR-y) $(GPT-y) $(SPI-y) $(SPL-y) $(LOGO-y) $(CHARGE_LOGO-y) #$(IMG2RLE-y) $(BIN2ARRAY-y)
 TOOLS	:= $(addprefix $(obj),$(TOOLS))
 
 all:	$(obj).depend $(TOOLS)
@@ -124,6 +126,13 @@ $(obj)spi_checksum:	spi_checksum.c
 $(obj)spl_params_fixer:	spl_params_fixer.c
 	$(HOSTCC) $(HOSTCFLAGS_NOPED) $(HOSTLDFLAGS) -o $@ $^
 	$(HOSTSTRIP) $@
+
+$(obj)img2rle:	img2rle.c
+	$(HOSTCC) $(HOSTCFLAGS_NOPED) $(HOSTLDFLAGS) $^ -ljpeg -lpng12 -o $@
+	$(HOSTSTRIP) $@
+
+$(obj)bin2array: bin2array.c
+	$(HOSTCC) $(HOSTCFLAGS_NOPED) $(HOSTLDFLAGS) -o $@ $^
 
 #-------  added by ykliu -----#
 $(LOGO_RLE):  $(obj)img2rle $(LOGO_JPG)
