--- a/boards.cfg
+++ b/boards.cfg
@@ -496,7 +496,7 @@ mensa_android_msc0           mips        xburst      mensa               ingenic
 mensa_android_msc1           mips        xburst      mensa               ingenic        jz4775      mensa:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1,BOOT_ANDROID
 mensa_uImage_msc0            mips        xburst      mensa               ingenic        jz4775      mensa:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR
 mensa_uImage_msc1            mips        xburst      mensa               ingenic        jz4775      mensa:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1
-mensa_android_nand           mips        xburst      mensa               ingenic        jz4775      mensa:JZ_NAND_MGR
+mensa_android_nand           mips        xburst      mensa               ingenic        jz4775		mensa:JZ_NAND_MGR,
 newton_uImage_msc0           mips        xburst      newton              ingenic        jz4775      newton:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR
 burner_jz4775_ddr3           mips        xburst      burner_jz4775       ingenic        jz4775      burner_jz4775:DDR_TYPE_DDR3
 burner_jz4775_lpddr          mips        xburst      burner_jz4775       ingenic        jz4775      burner_jz4775:DDR_TYPE_LPDDR,SPL_DDR_SOFT_TRAINING
@@ -512,7 +512,7 @@ grus_uImage_spinor	     mips        xburst      grus                ingenic     
 grus_uImage_msc0             mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,
 grus_uImage_msc1             mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1
 grus_spi_burner              mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1,SPI_BURNER
-grus_android_nand            mips        xburst      grus                ingenic        jz4780
+grus_android_nand            mips        xburst      grus                ingenic        jz4780		grus:JZ_NAND_MGR
 f4785_uImage_msc0            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 f4785_uImage_emmc            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,SUPPORT_EMMC_BOOT
 f4785_uImage_msc1            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC1
