--- a/boards.cfg
+++ b/boards.cfg
@@ -520,7 +520,7 @@ f4785_uImage_nand            mips        xburst      f4785               ingenic
 f4785_uImage_spinor          mips        xburst      f4785               ingenic        jz4785      f4785:SPL_SPI_SUPPORT
 f4785_uImage_spinand         mips        xburst      f4785               ingenic        jz4785      f4785:SPL_SPI_SUPPORT,SPI_NAND
 f4785_uImage_nor             mips        xburst      f4785               ingenic        jz4785      f4785:SPL_NOR_SUPPORT
-doraso_uImage_msc0           mips        xburst      doraso              ingenic        jz4785      doraso:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
+dorado_uImage_msc0           mips        xburst      dorado              ingenic        jz4785      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
 adp-ag101p                   nds32       n1213       adp-ag101p          AndesTech      ag101
 adp-ag102                    nds32       n1213       adp-ag102           AndesTech      ag102
